# rules_toolchains

./: .bazelrc  .bazelversion  .gitattributes  .pre-commit-config.yaml  BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  MODULE.bazel  README.md  motivation.md  renovate.json
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci.yaml  release.yml  release_prep.sh  tag.yaml
debug/: BUILD.bazel  generate_inputs_file.py
docs/: BUILD.bazel  actions.md  args.md  args_list.md  design.md  feature.md  feature_set.md  generic_rule.md  mutually_exclusive_category.md  tool.md  tool_capability.md  tool_map.md  toolchain.md  toolchain_api.md  toolchain_config.md  toolchain_info.md  variables.md
e2e/smoke/: BUILD  README.md  WORKSPACE.bazel
examples/rules_lang/: .bazelversion  MODULE.bazel
examples/rules_lang/examples/: BUILD.bazel
examples/rules_lang/examples/cross_compile_test/: BUILD.bazel  matchers.bzl  transitions.bzl
examples/rules_lang/lang/: defs.bzl  providers.bzl
examples/rules_lang/lang/toolchain/actions/: BUILD.bazel
examples/rules_lang/lang/toolchain/args/: BUILD.bazel
examples/rules_lang/lang/toolchain/capabilities/: BUILD.bazel
examples/rules_lang/lang/toolchain/default_toolchain/: BUILD.bazel
examples/rules_lang/lang/toolchain/default_toolchain/tools/: BUILD.bazel
examples/rules_lang/lang/toolchain/default_toolchain/tools/linux_x64/: BUILD.bazel  cat_tool.sh
examples/rules_lang/lang/toolchain/features/: BUILD.bazel
examples/rules_lang/lang/toolchain/variables/: BUILD.bazel
tests/: BUILD.bazel
tests/args/list_variable/: BUILD.bazel
tests/args/list_variable/golden/: valid_args.inputs
tests/args/strings/: BUILD  BUILD.bazel
tests/args/strings/golden/: args_add_strings.inputs  feature_with_args.inputs  requirement_unmet_for_wrong_action.inputs  wrong_action_type.inputs
tests/args/variable/: BUILD.bazel
tests/args/variable/golden/: valid_args.inputs
tests/features/: BUILD.bazel
tests/features/golden/: and_not_requirement_met.inputs  and_requirement_met.inputs  disable_all_features.inputs  duplicate_feature.inputs  empty_toolchain.inputs  enable_feature1.inputs  enable_implies.inputs  or_requirement_met.inputs
tests/rules/: rules.bzl
tests/toolchain/: BUILD.bazel
tests/toolchain/actions/: BUILD.bazel
tests/toolchain/tools/: BUILD.bazel  cat_tool.sh
toolchains/: BUILD.bazel  actions.bzl  args.bzl  args_list.bzl  extensions.bzl  feature.bzl  feature_constraint.bzl  feature_set.bzl  generic_rule.bzl  mutually_exclusive_category.bzl  repositories.bzl  tool.bzl  tool_capability.bzl  tool_map.bzl  toolchain.bzl  toolchain_config.bzl  toolchain_info.bzl  variables.bzl
toolchains/impl/: action.bzl  features.bzl
toolchains/private/: BUILD.bazel  action.bzl  collect.bzl  features.bzl  resolved_toolchain.bzl  small_set.bzl  toolchains_repo.bzl
toolchains/tests/: versions_test.bzl
