# Copyright 2025 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "actions",
    srcs = ["actions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
    ],
)

bzl_library(
    name = "args",
    srcs = ["args.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
    ],
)

bzl_library(
    name = "args_list",
    srcs = ["args_list.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
    ],
)

bzl_library(
    name = "feature",
    srcs = ["feature.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
        "//toolchains/private:small_set",
    ],
)

bzl_library(
    name = "feature_constraint",
    srcs = ["feature_set.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
        "//toolchains/private:features",
        "//toolchains/private:small_set",
    ],
)

bzl_library(
    name = "feature_set",
    srcs = ["feature_set.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
        "//toolchains/private:features",
    ],
)

bzl_library(
    name = "generic_rule",
    srcs = ["generic_rule.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:action",
        "//toolchains/private:collect",
    ],
)

bzl_library(
    name = "mutually_exclusive_category",
    srcs = ["mutually_exclusive_category.bzl"],
    visibility = ["//visibility:public"],
    deps = [":toolchain_info"],
)

bzl_library(
    name = "tool",
    srcs = ["tool.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
        "@bazel_skylib//rules/directory:providers",
    ],
)

bzl_library(
    name = "tool_capability",
    srcs = ["tool_capability.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:small_set",
    ],
)

bzl_library(
    name = "tool_map",
    srcs = ["tool_map.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:action",
        "//toolchains/private:collect",
        "//toolchains/private:features",
        "//toolchains/private:small_set",
    ],
)

bzl_library(
    name = "toolchain_info",
    srcs = ["toolchain_info.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "variables",
    srcs = ["variables.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain_info",
        "//toolchains/private:collect",
    ],
)

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)
