module(name = "rules_lang")

bazel_dep(
    name = "rules_toolchains",
    version = "0.0.0",
)
bazel_dep(name = "platforms", version = "0.0.11")

bazel_dep(name = "rules_testing", version = "0.6.0", dev_dependency = True)

local_path_override(
    module_name = "rules_toolchains",
    path = "../..",
)

register_toolchains("//lang/toolchain/default_toolchain:all")
