load("@rules_toolchains//toolchains:toolchain_config.bzl", "toolchain_config")

package(default_visibility = ["//visibility:public"])

toolchain_config(
    name = "default_toolchain_config",
    default_features = [
        "//lang/toolchain/args:default_args",
        "//lang/toolchain/features:feature1",
    ],
    # If you have tools such as clang which have seperate binaries per exec-target pair (eg. gcc-<exec>-<target>),
    # you can perform a select here over the target platform, then perform a select over the exec platform in the tool.
    tool_map = "//lang/toolchain/default_toolchain/tools:tool_map",
)

toolchain(
    name = "default_toolchain",
    # You shouldn't need exec_compatible_with and target_compatible_with here, because you can use selects.
    toolchain = ":default_toolchain_config",
    toolchain_type = "//lang/toolchain:toolchain_type",
)
