load("@rules_toolchains//toolchains:tool.bzl", "tool")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "config",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

tool(
    name = "compile_tool",
    src = "cat_tool.sh",
    capabilities = ["//lang/toolchain/capabilities:supports_foo"],
)

tool(
    name = "link_tool",
    src = "cat_tool.sh",
)
